dynamic paint substeps do not work for objects parented to armatures #31948

Closed
opened 2012-06-28 01:16:06 +02:00 by bassam kurdali · 6 comments
Member

%%%check the submitted .blend file/ archive.

1- we set a plane as a dynamic paint canvas, using Paint surface type and basic options.
2- we set substeps to 3
3- we create a group 'poop' and add two small spheres to it.
4- one sphere is parented to a bone in an armature that is animated moving across the plane.
5- the other sphere is directly keyed.
6- the mesh Brush group is set to 'poop'
7- bake image sequence.

RESULT:

the (red) non parented sphere has substeps.
the (blue) parented sphere does not.

NOTE:
this only happens when parenting to bones. parenting to objects works.

EXPECTED RESULT:

substeps should work regardless of parent/deform etc.

OS:
MacOS 10.5 and 10.6 (32 and 64 bits)
%%%

%%%check the submitted .blend file/ archive. 1- we set a plane as a dynamic paint canvas, using Paint surface type and basic options. 2- we set substeps to 3 3- we create a group 'poop' and add two small spheres to it. 4- one sphere is parented to a bone in an armature that is animated moving across the plane. 5- the other sphere is directly keyed. 6- the mesh Brush group is set to 'poop' 7- bake image sequence. RESULT: the (red) non parented sphere has substeps. the (blue) parented sphere does not. NOTE: this only happens when parenting to bones. parenting to objects works. EXPECTED RESULT: substeps should work regardless of parent/deform etc. OS: MacOS 10.5 and 10.6 (32 and 64 bits) %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%one -perhaps a bad sign- discover:
using:
bone parenting
armature deform
constraints to the bone

resutls in the same behavior. leading me to wonder if there is something specific to armatures that prevents substeps from working.
%%%

%%%one -perhaps a bad sign- discover: using: bone parenting armature deform constraints to the bone resutls in the same behavior. leading me to wonder if there is something specific to armatures that prevents substeps from working. %%%

%%%Miika, could you please check on this one? Thanks!%%%

%%%Miika, could you please check on this one? Thanks!%%%

%%%Fixed in svn r48399.%%%

%%%Fixed in svn r48399.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Thanks! and thanks for dynamic paint , it is a great feature :)%%%

%%%Thanks! and thanks for dynamic paint , it is a great feature :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31948
No description provided.