Fix #31948: dynamic paint substeps do not work for objects parented to armatures